WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133601
Fix more latched scrolling test flakiness and slowness
https://bugs.webkit.org/show_bug.cgi?id=133601
Summary
Fix more latched scrolling test flakiness and slowness
Simon Fraser (smfr)
Reported
2014-06-06 21:36:36 PDT
Fix more latched scrolling test flakiness and slowness
Attachments
Patch
(58.01 KB, patch)
2014-06-06 21:40 PDT
,
Simon Fraser (smfr)
bfulgham
: review+
bfulgham
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-06-06 21:40:03 PDT
Created
attachment 232653
[details]
Patch
Brent Fulgham
Comment 2
2014-06-09 10:46:06 PDT
Comment on
attachment 232653
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=232653&action=review
r=me. Minor typo in the ChangeLog.
> Source/WebKit2/ChangeLog:13 > + Secondly, the timer-baed scrolling tree commit could result in the scrolling
timer-based
> Tools/ChangeLog:13 > + Secondly, the timer-baed scrolling tree commit could result in the scrolling
timer-based
> LayoutTests/ChangeLog:13 > + Secondly, the timer-baed scrolling tree commit could result in the scrolling
timer-based
Simon Fraser (smfr)
Comment 3
2014-06-09 10:55:03 PDT
https://trac.webkit.org/r169692
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug